--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -2,6 +2,8 @@
   font-size: 30px;
   cursor: pointer;
   margin-left: 20px;
+  z-index: 10;
+  position: fixed;
 }
 
 .hamburger-icon.open {
